force-app/main/default/objects/Scheme__c/Scheme__c.object-meta.xml
<CustomObject>
    <label>Scheme</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Scheme #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>