force-app/main/default/objects/Scheme__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>