force-app/main/default/objects/Scheme__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>