force-app/main/default/objects/Scheme__c/fields/Budget_Consumed_p__c.field-meta.xml
<CustomField>
    <fullName>Budget_Consumed_p__c</fullName>
    <formula>Budget_Incentivized__c  /  Required_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Consumed %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>