force-app/main/default/objects/Scheme__c/fields/Budget_Incentivized__c.field-meta.xml
<CustomField>
    <fullName>Budget_Incentivized__c</fullName>
    <inlineHelpText>Incentive amount (₹) to be disbursed</inlineHelpText>
    <label>Budget Incentivized</label>
    <summarizedField>TPM_Incentives__c.Incentive_Value__c</summarizedField>
    <summaryForeignKey>TPM_Incentives__c.Scheme__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>