force-app/main/default/objects/Scheme__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <inlineHelpText>Scheme compensation award</inlineHelpText>
    <label>Compensation %</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>