force-app/main/default/objects/Scheme__c/fields/Customer_Case_Target__c.field-meta.xml
<CustomField>
    <fullName>Customer_Case_Target__c</fullName>
    <inlineHelpText>Volume (cases) target for compensation award</inlineHelpText>
    <label>Dealer Volume Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>