force-app/main/default/objects/Scheme__c/fields/Distributed_Opted__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Opted__c</fullName>
    <label>Dealers Included</label>
    <summaryForeignKey>TPM_Incentives__c.Scheme__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>