force-app/main/default/objects/Scheme__c/fields/Distributors__c.field-meta.xml
<CustomField>
    <fullName>Distributors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>