force-app/main/default/objects/Scheme__c/fields/Global_Budget__c.field-meta.xml
<CustomField>
    <fullName>Global_Budget__c</fullName>
    <formula>$Setup.Scheme_Settings__c.Global_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Org-wide yearly TPM budget</inlineHelpText>
    <label>Global Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>