force-app/main/default/objects/Scheme__c/fields/Global_Budget_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Global_Budget_Consumed__c</fullName>
    <inlineHelpText>Org budget spent to date</inlineHelpText>
    <label>Global Budget Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>