force-app/main/default/objects/Scheme__c/fields/Global_Budget_Status__c.field-meta.xml
<CustomField>
    <fullName>Global_Budget_Status__c</fullName>
    <formula>IF(  Global_Budget__c -  Global_Budget_Consumed__c  &gt; Budget_Incentivized__c , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EmQ6j&amp;operationContext=CHATTER&amp;contentId=05T1U00001Y4qsW&quot;, &quot;VALID&quot;, 15, 100) , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EmQ6e&amp;operationContext=CHATTER&amp;contentId=05T1U00001Y4qsR&quot;, &quot;INVALID&quot;, 15, 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Budget Incentivized &gt; Global Budget - Budget Consumed</inlineHelpText>
    <label>Global Budget Status</label>
    <type>Text</type>
</CustomField>