force-app/main/default/objects/Scheme__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <label>Inclusions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Key Person Allowance</fullName>
            </value>
            <value>
                <fullName>Foreign Travel</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>