force-app/main/default/objects/Scheme__c/fields/Predicted_Rev_Gap__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Rev_Gap__c</fullName>
    <formula>Predicted_Revenue__c  -  Target_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted Rev Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>