force-app/main/default/objects/Scheme__c/fields/Predicted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Revenue__c</fullName>
    <label>Predicted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>