force-app/main/default/objects/Scheme__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>