force-app/main/default/objects/Scheme__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <inlineHelpText>Applicable products/groups</inlineHelpText>
    <label>Product Portfolio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Group</valueSetName>
    </valueSet>
</CustomField>