force-app/main/default/objects/Scheme__c/fields/Projected_Budget_Overrun__c.field-meta.xml
<CustomField>
    <fullName>Projected_Budget_Overrun__c</fullName>
    <label>Projected Budget Overrun</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>