force-app/main/default/objects/Scheme__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Applicable regions</inlineHelpText>
    <label>Region</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Andaman and Nicobar Islands</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh</fullName>
            </value>
            <value>
                <fullName>Dadar and Nagar Haveli</fullName>
            </value>
            <value>
                <fullName>Daman and Diu</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Lakshadweep</fullName>
            </value>
            <value>
                <fullName>Puducherry</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir</fullName>
            </value>
            <value>
                <fullName>Jharkhand</fullName>
            </value>
            <value>
                <fullName>Karnataka</fullName>
            </value>
            <value>
                <fullName>Kerala</fullName>
            </value>
            <value>
                <fullName>Madhya Pradesh</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Manipur</fullName>
            </value>
            <value>
                <fullName>Meghalaya</fullName>
            </value>
            <value>
                <fullName>Mizoram</fullName>
            </value>
            <value>
                <fullName>Nagaland</fullName>
            </value>
            <value>
                <fullName>Odisha</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Rajasthan</fullName>
            </value>
            <value>
                <fullName>Sikkim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>