force-app/main/default/objects/Scheme__c/fields/Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget__c</fullName>
    <formula>Required_Budget__c - Budget_Incentivized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount after deducting incentives</inlineHelpText>
    <label>Remaining Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>