force-app/main/default/objects/Scheme__c/fields/Required_Budget__c.field-meta.xml
<CustomField>
    <fullName>Required_Budget__c</fullName>
    <description>Amount requested for scheme</description>
    <label>Requested Budget</label>
    <precision>16</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>