force-app/main/default/objects/Scheme__c/fields/Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generated__c</fullName>
    <label>Revenue Generated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>