force-app/main/default/objects/Scheme__c/fields/Revenue_Goal_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goal_Achievement__c</fullName>
    <formula>Revenue_Generated__c  /   Target_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Goal Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>