force-app/main/default/objects/Scheme__c/fields/Scheme_Performance_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Performance_Status__c</fullName>
    <formula>IF(  Scheme_Target__c  &gt; Budget_Incentivized__c , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EmQ6j&amp;operationContext=CHATTER&amp;contentId=05T1U00001Y4qsW&quot;, &quot;VALID&quot;, 15, 100) , IMAGE(&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681U00000EmQ6e&amp;operationContext=CHATTER&amp;contentId=05T1U00001Y4qsR&quot;, &quot;INVALID&quot;, 15, 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Performance Status</label>
    <type>Text</type>
</CustomField>