force-app/main/default/objects/Scheme__c/fields/Scheme_Target__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Target__c</fullName>
    <inlineHelpText>Revenue (₹) target for compensation award</inlineHelpText>
    <label>Dealer Revenue Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>