force-app/main/default/objects/Scheme__c/fields/Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Target_Month__c</fullName>
    <label>Target Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>