force-app/main/default/objects/Scheme__c/fields/Target_Sale__c.field-meta.xml
<CustomField>
    <fullName>Target_Sale__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Target sales (₹) revenue from scheme</inlineHelpText>
    <label>Scheme Target Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>