force-app/main/default/objects/Scheme__c/fields/Target_Volume__c.field-meta.xml
<CustomField>
    <fullName>Target_Volume__c</fullName>
    <inlineHelpText>Target volume (cases) from scheme</inlineHelpText>
    <label>Scheme Target Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>