force-app/main/default/objects/Scheme__c/fields/TargetMonthNo__c.field-meta.xml
<CustomField>
    <fullName>TargetMonthNo__c</fullName>
    <formula>CASE(TEXT(Target_Month__c), 
&apos;January&apos;, 1, &apos;February&apos;, 2,
&apos;March&apos;, 3, &apos;April&apos;, 4,
&apos;May&apos;, 5, &apos;June&apos;, 6,
&apos;July&apos;, 7, &apos;August&apos;, 8, 
&apos;September&apos;, 9, &apos;October&apos;, 10,
&apos;November&apos;, 11, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Month #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>