force-app/main/default/objects/Scheme__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>