force-app/main/default/objects/Scheme__c/fields/YoY_Growth__c.field-meta.xml
<CustomField>
    <fullName>YoY_Growth__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YoY Growth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>