force-app/main/default/objects/Scheme__c/validationRules/YoY_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>YoY_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				(TEXT(Type__c)== &apos;YoY Target Based&apos;),
  		(ISNULL(YoY_Growth__c) )
)</errorConditionFormula>
    <errorMessage>For YoY Target Based Schemes value of YoY_Growth__c can&apos;t be empty</errorMessage>
</ValidationRule>