force-app/main/default/objects/Scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Required_Budget__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Global_Budget_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Running,Completed</value>
    </filters>
    <label>Under Development</label>
</ListView>