force-app/main/default/objects/Scheme__c/listViews/All_Schemes.listView-meta.xml
<ListView>
    <fullName>All_Schemes</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Global_Budget_Status__c</columns>
    <columns>Target_Sale__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Schemes</label>
</ListView>