force-app/main/default/objects/Scheme__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Required_Budget__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Budget_Incentivized__c</columns>
    <columns>Global_Budget_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed</label>
</ListView>