force-app/main/default/objects/Scheme__c/listViews/DEMO.listView-meta.xml
<ListView>
    <fullName>DEMO</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Required_Budget__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Global_Budget_Status__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title__c</field>
        <operation>contains</operation>
        <value>DEMO</value>
    </filters>
    <label>DEMO</label>
</ListView>